force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Conditional_Display_Criteria__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Conditional_Display_Criteria__c</fullName>
    <description>Administrators manually populate this optional field to store the Forms syntax used to dictate whether the system should display a conditional field on the Field Configuration object.</description>
    <inlineHelpText>This field is optional and must be manually populated. It stores the Forms syntax that is used to dictate whether a conditional field set should be displayed.</inlineHelpText>
    <label>Conditional Display Criteria</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>