force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Defined_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Defined_Picklist_Values__c</fullName>
    <description>Administrators populate this text field with defined picklist values in a pipe-delimited list.</description>
    <inlineHelpText>Enter the picklist values in a pipe-delimited list.</inlineHelpText>
    <label>Defined Picklist Values</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>