force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Filter_Criteria__c</fullName>
    <description>Administrators populate this long text field with lookup filter criteria. The system applies this criteria to generate lookup results. The default value is null.</description>
    <inlineHelpText>Use this field to define lookup filter criteria that the system uses to generate lookup results.</inlineHelpText>
    <label>Filter Criteria</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>