force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Format_Enabled__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Format_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether or not the defined Format Expression will be enforced for this field.</description>
    <inlineHelpText>If unchecked, the rule defined for Format Expression will not be applied.</inlineHelpText>
    <label>Format Validation Enabled</label>
    <type>Checkbox</type>
</CustomField>