force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Is_Conditional_Lookup__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Conditional_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this checkbox field if the field configuration is a conditional lookup. The value should not be manually altered.</description>
    <label>Is Conditional Lookup</label>
    <type>Checkbox</type>
</CustomField>