force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Is_Header__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This optional field is a manually populated checkbox on the Field Configuration object. By default, it is not selected. When selected, it will display the field&apos;s value next to the object name in the snapshot.</description>
    <label>Is Header</label>
    <type>Checkbox</type>
</CustomField>