force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Output_Expression__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Output_Expression__c</fullName>
    <description>Use Output Expression to provide an expression that specifies the format of text displayed in a read-only view.</description>
    <inlineHelpText>Enter a formatting expression for displaying the value of this field as text.</inlineHelpText>
    <label>Output Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>