force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Route__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a Route. If none is specified the Field Configuration can be applied everywhere.</description>
    <inlineHelpText>Specify the Route that this Field Configuration will apply to, otherwise it will be applied everywhere.</inlineHelpText>
    <label>Route</label>
    <referenceTo>nFORCE__Route__c</referenceTo>
    <relationshipLabel>Field Configuration Route</relationshipLabel>
    <relationshipName>Field_Configuration_Route</relationshipName>
    <type>Lookup</type>
</CustomField>