force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Tooltip_Contents__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Tooltip_Contents__c</fullName>
    <description>The text contents of the tooltip displayed after clicking the tooltip link.</description>
    <label>Tooltip Contents</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>