force-app/main/default/objects/nFORCE__Field_Configuration__c/fields/nFORCE__Tooltip_Enabled__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Tooltip_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether or not a tooltip will be displayed.</description>
    <inlineHelpText>Check this field to enable a tooltip for this field.</inlineHelpText>
    <label>Tooltip Enabled</label>
    <type>Checkbox</type>
</CustomField>