force-app/main/default/objects/nFORCE__Field_Configuration__c/validationRules/nFORCE__Editable_or_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>nFORCE__Editable_or_Read_Only</fullName>
    <active>true</active>
    <description>This validation rule ensures that a field configuration record cannot be both Editable and Read Only.</description>
    <errorConditionFormula>nFORCE__Is_Read_Only__c &amp;&amp;  nFORCE__Is_Editable__c</errorConditionFormula>
    <errorMessage>A field cannot be both Editable and Read-Only.</errorMessage>
</ValidationRule>